# pendulumium

./: .gitignore  LICENSE  README.md  dump.py  pyproject.toml  run.py  thoughts.txt
archive/: thoughts.txt
src/pendulumium/: __init__.py  _decoder.py  _generator.py  _validator.py  exceptions.py
tests/: test_decoder.py  test_validator.py
