[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pendulumium"
version = "2.0.0"
description = "UUID v7 generator - time-sorted, nanosecond-precise, collision-resistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ahmed Mughram", email = "ahmed@mughram.com" }]
keywords = ["uuid", "uuid7", "identifier", "time-sorted", "rfc9562"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage   = "https://github.com/vszlx4/pendulumium"
Repository = "https://github.com/vszlx4/pendulumium"
Issues     = "https://github.com/vszlx4/pendulumium/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict                 = true
python_version         = "3.10"
mypy_path              = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"